#
# Copyright (C) 2026 by Thun Lu. All rights reserved.
#

set(VLINK_MODULE_NAME ddsr)
set(VLINK_MODULE_IMPORT_ALL FALSE)

project(vlink-${VLINK_MODULE_NAME} LANGUAGES C CXX)

# options
option(SKIP_DDSR "Skip ddsr module" ON)

if(SKIP_DDSR)
  message(STATUS "Skip ddsr module")
  return()
endif()

option(INSTALL_DDSR "Install ddsr libraries" ON)

# requires
list(APPEND CMAKE_PREFIX_PATH ${PROJECT_SOURCE_DIR}/cmake)
find_package(RTIConnextDDS QUIET)

if(NOT TARGET RTIConnextDDS::c_api)
  message(STATUS "Ignore ddsr module")
  return()
endif()

# rt-libs
list(APPEND VLINK_LIBRARIES ${PROJECT_NAMESPACE}${VLINK_MODULE_NAME})
set(VLINK_LIBRARIES
    ${VLINK_LIBRARIES}
    PARENT_SCOPE
)

# src
if(RTICONNEXTDDS_VERSION VERSION_LESS 6.0.0)
  set(RTI_VERSION_FLAG "5_x")
else()
  set(RTI_VERSION_FLAG "7_x")
endif()

file(GLOB PROJECT_HDRS ${PROJECT_SOURCE_DIR}/*.hpp ${PROJECT_SOURCE_DIR}/builtin/*.h
     ${PROJECT_SOURCE_DIR}/builtin/${RTI_VERSION_FLAG}/*.h
)
file(GLOB PROJECT_SRCS ${PROJECT_SOURCE_DIR}/*.cc ${PROJECT_SOURCE_DIR}/builtin/${RTI_VERSION_FLAG}/*.c)
add_library(${PROJECT_NAME} ${PROJECT_HDRS} ${PROJECT_SRCS})
add_library(${PROJECT_NAMESPACE}${PROJECT_NAME} ALIAS ${PROJECT_NAME})
add_library(${PROJECT_NAMESPACE}${VLINK_MODULE_NAME} ALIAS ${PROJECT_NAME})
target_link_libraries(${PROJECT_NAME} PUBLIC vlink::vlink)
target_link_libraries(${PROJECT_NAME} PUBLIC RTIConnextDDS::core RTIConnextDDS::c_api)
target_compile_definitions(
  ${PROJECT_NAME}
  PRIVATE "${VLINK_LIB_DEFINES}"
  PUBLIC "VLINK_SUPPORT_DDSR"
)

get_target_property(RTI_CORE_LIBS_IMPLIB RTIConnextDDS::core IMPORTED_IMPLIB)
get_target_property(RTI_CAPI_LIBS_IMPLIB RTIConnextDDS::c_api IMPORTED_IMPLIB)
get_target_property(RTI_CORE_LIBS_LOCATION RTIConnextDDS::core IMPORTED_LOCATION)
get_target_property(RTI_CAPI_LIBS_LOCATION RTIConnextDDS::c_api IMPORTED_LOCATION)

# install
install(
  TARGETS ${PROJECT_NAME}
  RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
  ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
  LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
)

if(INSTALL_DDSR)
  if(RTI_CORE_LIBS_IMPLIB AND RTI_CAPI_LIBS_IMPLIB)
    install(FILES ${RTI_CORE_LIBS_IMPLIB} ${RTI_CAPI_LIBS_IMPLIB} DESTINATION ${CMAKE_INSTALL_LIBDIR})
  endif()

  if(RTI_CORE_LIBS_LOCATION AND RTI_CAPI_LIBS_LOCATION)
    if(WIN32)
      install(FILES ${RTI_CORE_LIBS_LOCATION} ${RTI_CAPI_LIBS_LOCATION} DESTINATION ${CMAKE_INSTALL_BINDIR})
      add_custom_command(
        TARGET ${PROJECT_NAME}
        POST_BUILD
        COMMAND ${CMAKE_COMMAND} -E copy "${RTI_CORE_LIBS_LOCATION}" "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}"
        COMMAND ${CMAKE_COMMAND} -E copy "${RTI_CAPI_LIBS_LOCATION}" "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}"
      )
    else()
      install(FILES ${RTI_CORE_LIBS_LOCATION} ${RTI_CAPI_LIBS_LOCATION} DESTINATION ${CMAKE_INSTALL_LIBDIR})
      add_custom_command(
        TARGET ${PROJECT_NAME}
        POST_BUILD
        COMMAND ${CMAKE_COMMAND} -E copy "${RTI_CORE_LIBS_LOCATION}" "${CMAKE_LIBRARY_OUTPUT_DIRECTORY}"
        COMMAND ${CMAKE_COMMAND} -E copy "${RTI_CAPI_LIBS_LOCATION}" "${CMAKE_LIBRARY_OUTPUT_DIRECTORY}"
      )
    endif()
  endif()
endif()

# export
vlink_export(${PROJECT_NAME} ${PROJECT_NAME} ${PROJECT_NAMESPACE} ${CMAKE_PROJECT_VERSION})
